modified:   11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb

--- a/11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb
+++ b/11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb
@@ -153,7 +153,7 @@
     }
    },
    "source": [
-    "### Creation of Objects With and Without Parameters"
+    "### Creation of Objects With or Without Parameters"
    ]
   },
   {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -278,12 +278,71 @@
    },
    "outputs": [],
    "source": [
-    "Cat Garfield = new Cat(\"Garfield\", \"Orange, White\");"
+    "Cat Garfield = new Cat(\"Garfield\", \"Orange\");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>Name</th><th>FurColor</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>Garfield</pre></div></td><td><div class=\"dni-plaintext\"><pre>Orange</pre></div></td></tr></tbody></table>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Garfield"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -307,48 +366,6 @@
    "source": [
     "Garfield.Meow();"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "<br>"
-   ]
   }
  ],
  "metadata": {
@@ -362,72 +379,8 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [
-       "c#",
-       "C#"
-      ],
-      "languageName": "C#",
+      "aliases": [],
       "name": "csharp"
-     },
-     {
-      "aliases": [
-       "frontend"
-      ],
-      "name": "vscode"
-     },
-     {
-      "aliases": [],
-      "name": ".NET"
-     },
-     {
-      "aliases": [
-       "f#",
-       "F#"
-      ],
-      "languageName": "F#",
-      "name": "fsharp"
-     },
-     {
-      "aliases": [],
-      "languageName": "HTML",
-      "name": "html"
-     },
-     {
-      "aliases": [
-       "js"
-      ],
-      "languageName": "JavaScript",
-      "name": "javascript"
-     },
-     {
-      "aliases": [],
-      "languageName": "KQL",
-      "name": "kql"
-     },
-     {
-      "aliases": [],
-      "languageName": "Mermaid",
-      "name": "mermaid"
-     },
-     {
-      "aliases": [
-       "powershell"
-      ],
-      "languageName": "PowerShell",
-      "name": "pwsh"
-     },
-     {
-      "aliases": [],
-      "languageName": "SQL",
-      "name": "sql"
-     },
-     {
-      "aliases": [],
-      "name": "value"
-     },
-     {
-      "aliases": [],
-      "name": "webview"
      }
     ]
    }
