modified:   11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb

--- a/11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb
+++ b/11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb
@@ -119,7 +119,7 @@
     "    // Methods /////////////////////////////////////////////////////////\n",
     "    public void Meow()\n",
     "    {\n",
-    "        Console.WriteLine($\"The Cat named {this.name} says: Meeeeoow!\");\n",
+    "        Console.WriteLine($\"A Cat named {this.name} says: Meeeeoow!\");\n",
     "    }\n",
     "    ////////////////////////////////////////////////////////////////////\n",
     "\n",
