modified:   11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb

--- a/11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb
+++ b/11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb
@@ -138,6 +138,23 @@
     }
    },
    "source": [
+    "The `Cat` `class`  defines the $Properties$ `Name` and `FurColor`, which keep their values in the *hidden* (*private*) $Fields$ *name* and *color*.    \n",
+    "    \n",
+    "Furthermore, **two** $Constructors$ are defined for creating instances of the `Cat` `class` , respectively *with* and *without* parameters, and a $Method$ to `Meow()`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "<br>"
    ]
   },
@@ -213,23 +230,6 @@
    },
    "source": [
     "It's important to understand that, in this assignment, the **object**'s *value* is not *copied*, but rather a **reference** (**address in memory**) to the newly created **object** is passed directly into the variable."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "The `Cat` `class`  defines the $Properties$ `Name` and `FurColor`, which keep their values in the *hidden* (*private*) $Fields$ *name* and *color*.    \n",
-    "    \n",
-    "Furthermore, two $Constructors$ are defined for creating instances of the `Cat` `class` , respectively *with* and *without* parameters, and a $Method$ to `Meow()`."
    ]
   },
   {
