modified:   11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb

--- a/11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb
+++ b/11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb
@@ -117,9 +117,15 @@
     "\n",
     "\n",
     "    // Methods /////////////////////////////////////////////////////////\n",
+    "    //                      Public Access                             //\n",
     "    public void Meow()\n",
     "    {\n",
     "        Console.WriteLine($\"A Cat named {this.name} says: Meeeeoow!\");\n",
+    "    }\n",
+    "    //                      Private Access                            //\n",
+    "    private void Purr()\n",
+    "    {\n",
+    "        Console.WriteLine($\"A Cat named {this.name} likes you alot.\");    \n",
     "    }\n",
     "    ////////////////////////////////////////////////////////////////////\n",
     "\n",
@@ -264,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -283,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -436,6 +442,38 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Methods"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Calling the **Methods** of a given object is done through the invocation operator () and with the help of the operator . (dot). The operator dot is not obligatory only in case the method is called in the body of another method of the same class. Calling a **Method** is performed by its name followed by `()` or `( [parameters] )` for the case when we pass it some *arguments*. \n",
+    "   \n",
+    "`class` **Methods** have **access modifiers** `public`, `private` or `protected` which leverage varing degrees of restrictions upon *where* the associated Method can be invoked from."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
@@ -454,12 +492,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Cat named Garfield says: Meeeeoow!\r\n"
+      "A Cat named Garfield says: Meeeeoow!\r\n"
      ]
     }
    ],
    "source": [
+    "// a  public  access modifier   \n",
+    "// means the method can be invoked from anywhere else\n",
     "Garfield.Meow();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(3,10): error CS0122: 'Cat.Purr()' is inaccessible due to its protection level",
+     "output_type": "error",
+     "traceback": [
+      "(3,10): error CS0122: 'Cat.Purr()' is inaccessible due to its protection level"
+     ]
+    }
+   ],
+   "source": [
+    "// a  private  access modifier   \n",
+    "// means the method can only be invoked from inside the parent class\n",
+    "Garfield.Purr();"
    ]
   }
  ],
