modified:   11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb new file:   11. Creating and Using Objects/_img/create_obj_with_params.png new file:   11. Creating and Using Objects/_img/create_obj_without_params.jpg

--- a/11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb
+++ b/11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb
@@ -235,7 +235,22 @@
     }
    },
    "source": [
-    "It's important to understand that, in this assignment, the **object**'s *value* is not *copied*, but rather a **reference** (**address in memory**) to the newly created **object** is passed directly into the variable."
+    "It's important to understand that, in this assignment, the **object**'s *value* is not *copied*, but rather a **reference** (**address in memory**) to the newly created **object** is passed directly into the variable:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<img src=\"_img/create_obj_without_params.jpg\" style=\"display: block; margin: auto;\"></img>"
    ]
   },
   {
@@ -314,6 +329,21 @@
    ],
    "source": [
     "Garfield"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<img src=\"_img/create_obj_with_params.png\" style=\"display: block; margin: auto;\"></img>"
    ]
   },
   {
