modified:   11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb new file:   12. Exception Handling/The Anatomy of an Exception.ipynb

--- a/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
+++ b/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
@@ -1145,6 +1145,7 @@
       "aliases": [
        "frontend"
       ],
+      "languageName": null,
       "name": "vscode"
      },
      {
@@ -1195,6 +1196,7 @@
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": "value"
      },
      {
