modified:   12. Exception Handling/The Anatomy of an Exception.ipynb

--- a/12. Exception Handling/The Anatomy of an Exception.ipynb
+++ b/12. Exception Handling/The Anatomy of an Exception.ipynb
@@ -36,6 +36,41 @@
     }
    },
    "source": [
+    "An **Exception** is a notification that something has interrupted the normal\n",
+    "program execution.    \n",
+    "   \n",
+    "**Exception**s provide a programming paradigm for detecting and reacting to unexpected events. When an **exception** arises, the state of the program is saved, and the normal flow is interrupted while control is passed to an **exception** **handler** (if any of such exist in the current context).   \n",
+    "   \n",
+    "**Exception**s are $raised$ or $thrown$ by programming code that must send a signal to the executing program about an error or an unusual situation. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<vr>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "\n",
     "Observe the followiing code, which results in a `FileNotFoundException` after a *Bad File Name* is given as an argument to the `System.IO.Streamreader()` method for reading characters from a byte stream in a particular encoding:\n"
    ]
@@ -182,6 +217,73 @@
    ],
    "source": [
     "reader"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Exceptions in .NET"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "In $.NET$, an **Exception** is an **object** whose purpose is to signal an *error* or an *event* which is not anticipated in the normal program flow.    \n",
+    "   \n",
+    "When such unusual event takes place, we say that the executing method $throws$ a special object containing information about: \n",
+    "- the type of the error\n",
+    "- the place in the program where the error occurred\n",
+    "- the program state at the moment of the error.    \n",
+    "   \n",
+    "Each exception in $.NET$ contains the so-called **stack trace**, which gives information of exactly *where* the error occurred."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Catching Exceptions in $C\\#$"
    ]
   }
  ],
