modified:   12. Exception Handling/The Anatomy of an Exception.ipynb

--- a/12. Exception Handling/The Anatomy of an Exception.ipynb
+++ b/12. Exception Handling/The Anatomy of an Exception.ipynb
@@ -72,7 +72,7 @@
    },
    "source": [
     "\n",
-    "Observe the followiing code, which results in a `FileNotFoundException` after a *Bad File Name* is given as an argument to the `System.IO.Streamreader()` method for reading characters from a byte stream in a particular encoding:\n"
+    "Observe the following code, which results in a `FileNotFoundException` after a *Bad File Name* is given as an argument to the `System.IO.Streamreader()` method for reading characters from a byte stream in a particular encoding:\n"
    ]
   },
   {
