modified:   12. Exception Handling/The Anatomy of an Exception.ipynb

--- a/12. Exception Handling/The Anatomy of an Exception.ipynb
+++ b/12. Exception Handling/The Anatomy of an Exception.ipynb
@@ -43,12 +43,12 @@
     }
    },
    "source": [
-    "An **Exception** is a notification that something has interrupted the normal\n",
-    "program execution.    \n",
+    "An **Exception** is a notification that something has *interrupted the normal\n",
+    "program execution*.    \n",
     "   \n",
-    "**Exception**s provide a programming paradigm for detecting and reacting to unexpected events. When an **exception** arises, the state of the program is saved, and the normal flow is interrupted while control is passed to an **exception** **handler** (if any of such exist in the current context).   \n",
+    "**Exceptions** provide a programming paradigm for detecting and reacting to unexpected events. When an **exception** arises, the state of the program is saved, and the normal flow is interrupted while control is passed to an **exception** **handler** (if any of such exist in the current context).   \n",
     "   \n",
-    "**Exception**s are $raised$ or $thrown$ by programming code that must send a signal to the executing program about an error or an unusual situation. "
+    "**Exceptions** are $raised$ or $thrown$ by programming code that must send a signal to the executing program about an error or an unusual situation. "
    ]
   },
   {
@@ -360,9 +360,7 @@
     }
    },
    "source": [
-    "After a method throws an **exception**, **CLR** starts looking for an **exception handler** that can process the error.  \n",
-    "\n",
-    "If `Main(…)` is reached and no **handler** is found, **CLR** *catches* the exception and usually displays an error message as generalized in the figure below:"
+    "After a method throws an **exception**, **CLR** starts looking for an **exception handler** that can process the error, as generalized in the figure below:  "
    ]
   },
   {
@@ -378,6 +376,22 @@
    },
    "source": [
     "<img src=\"_img/ExceptionCycle.jpg\" style=\"\"></img>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "\n",
+    "If `Main(…)` is reached and no **handler** is found, **CLR** *catches* the exception and usually displays an error message "
    ]
   }
  ],
