modified:   12. Exception Handling/The Anatomy of an Exception.ipynb

--- a/12. Exception Handling/The Anatomy of an Exception.ipynb
+++ b/12. Exception Handling/The Anatomy of an Exception.ipynb
@@ -391,7 +391,7 @@
    },
    "source": [
     "\n",
-    "If `Main(…)` is reached and no **handler** is found, **CLR** *catches* the exception and usually displays an error message "
+    "If `Main(…)` is reached and no **handler** is found, **CLR** *catches* the **exception** and usually displays an error message. "
    ]
   }
  ],
